--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "node-sass": "^4.13.1",
     "react": "^16.10.1",
