--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "^3.3.0"
+    "react-redux": "^7.2.0",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
