--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
     "mongoose-unique-validator": "^2.0.3",
