--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.3.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint ./src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,7 +36,12 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.1.2"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1"
   },
   "proxy": "http://localhost:5000"
 }
