--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
-  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
+  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0"
+  }
 }
