--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.2",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
     "concurrently": "^4.1.0",
