--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
