--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
+    "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5"
   },
   "scripts": {
